--- a/notebook/superstore_analysis.ipynb
+++ b/notebook/superstore_analysis.ipynb
@@ -302,8 +302,8 @@
     "# 7. Upload to MySQL (if using SQL, otherwise skip section)\n",
     "import pymysql\n",
     "from sqlalchemy import create_engine\n",
-    "connection = pymysql.connect(host='localhost', user='root', password='pricass00', db='sales_db')\n",
-    "engine = create_engine('mysql+pymysql://root:pricass00@localhost/sales_db')\n",
+    "connection = pymysql.connect(host='localhost', user='root', password='********', db='sales_db')\n",
+    "engine = create_engine('mysql+pymysql://root:********@localhost/sales_db')\n",
     "df.to_sql('ssales', engine, if_exists='replace', index=False)\n",
     "print(\"Data uploaded to MySQL successfully!\")\n"
    ]
