--- a/notebook/superstore_analysis.ipynb
+++ b/notebook/superstore_analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "\n",
     "# 1. Project Intro\n",
-    "**Analyze Superstore sales and profitability across key business groups (category, segment, region, discount). Report actionable insights using clean data analysis and for-loop visualizations**\n"
+    "**Analyze Superstore sales and profitability across key business groups (category, segment, region, discount).**\n"
    ]
   },
   {
